Ensure magic buttons align when active

--- a/app/ui/static/css/modules/magic.css
+++ b/app/ui/static/css/modules/magic.css
@@ -12,6 +12,7 @@
 }
 
 .mg-name {
+  height: 25px;
   font-size: 22px;
   text-transform: lowercase;
 }
